Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UWorld.h

	DOTNET_EXPORT auto E_UWorld_DestroyWorld(UWorld* Self, bool bInformEngineOfWorld, UWorld* NewWorld)
	{
		auto _p0 = bInformEngineOfWorld;
		auto _p1 = NewWorld;
		Self->DestroyWorld(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_DuplicateRequestedLevels(UWorld* Self, char* MapName)
	{
		auto _p0 = ConvertFromManage_FName(MapName);
		Self->DuplicateRequestedLevels(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_DuplicateWorldForPIE(UWorld* Self, char* PackageName, UWorld* OwningWorld)
	{
		auto _p0 = ConvertFromManage_FString(PackageName);
		auto _p1 = OwningWorld;
		return ConvertToManage_ObjectPointerDescription(Self->DuplicateWorldForPIE(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UWorld_EditorDestroyActor(UWorld* Self, AActor* Actor, bool bShouldModifyLevel)
	{
		auto _p0 = Actor;
		auto _p1 = bShouldModifyLevel;
		return Self->EditorDestroyActor(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_EncroachingBlockingGeometry(UWorld* Self, AActor* TestActor, INT_PTR TestLocation, INT_PTR TestRotation, INT_PTR ProposedAdjustment)
	{
		auto _p0 = TestActor;
		auto _p1 = *(FVector*)TestLocation;
		auto _p2 = *(FRotator*)TestRotation;
		auto _p3 = (FVector*)ProposedAdjustment;
		return Self->EncroachingBlockingGeometry(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UWorld_EnsureCollisionTreeIsBuilt(UWorld* Self)
	{
		Self->EnsureCollisionTreeIsBuilt();
	}
	DOTNET_EXPORT auto E_UWorld_FindTeleportSpot(UWorld* Self, AActor* TestActor, INT_PTR PlaceLocation, INT_PTR PlaceRotation)
	{
		auto _p0 = TestActor;
		auto& _p1 = *(FVector*)PlaceLocation;
		auto _p2 = *(FRotator*)PlaceRotation;
		return Self->FindTeleportSpot(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UWorld_FinishPhysicsSim(UWorld* Self)
	{
		Self->FinishPhysicsSim();
	}
	DOTNET_EXPORT auto E_UWorld_FlushLevelStreaming(UWorld* Self, EFlushLevelStreamingType FlushType)
	{
		auto _p0 = FlushType;
		Self->FlushLevelStreaming(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ForceGarbageCollection(UWorld* Self, bool bFullPurge)
	{
		auto _p0 = bFullPurge;
		Self->ForceGarbageCollection(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_GetActiveLevelCollectionIndex(UWorld* Self)
	{
		return Self->GetActiveLevelCollectionIndex();
	}
	DOTNET_EXPORT auto E_UWorld_GetActorCount(UWorld* Self)
	{
		return Self->GetActorCount();
	}
	DOTNET_EXPORT auto E_UWorld_GetAudioTimeSeconds(UWorld* Self)
	{
		return Self->GetAudioTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetDefaultGravityZ(UWorld* Self)
	{
		return Self->GetDefaultGravityZ();
	}
	DOTNET_EXPORT auto E_UWorld_GetDeltaSeconds(UWorld* Self)
	{
		return Self->GetDeltaSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetDetailMode(UWorld* Self)
	{
		return Self->GetDetailMode();
	}
	DOTNET_EXPORT auto E_UWorld_GetGravityZ(UWorld* Self)
	{
		return Self->GetGravityZ();
	}
	DOTNET_EXPORT auto E_UWorld_GetMapName(UWorld* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetMapName());
	}
	DOTNET_EXPORT auto E_UWorld_GetNetMode(UWorld* Self)
	{
		return Self->GetNetMode();
	}
	DOTNET_EXPORT auto E_UWorld_GetNonDefaultPhysicsVolumeCount(UWorld* Self)
	{
		return Self->GetNonDefaultPhysicsVolumeCount();
	}
	DOTNET_EXPORT auto E_UWorld_GetNumLevels(UWorld* Self)
	{
		return Self->GetNumLevels();
	}
	DOTNET_EXPORT auto E_UWorld_GetNumPawns(UWorld* Self)
	{
		return Self->GetNumPawns();
	}
	DOTNET_EXPORT auto E_UWorld_GetNumPlayerControllers(UWorld* Self)
	{
		return Self->GetNumPlayerControllers();
	}
	DOTNET_EXPORT auto E_UWorld_GetProgressDenominator(UWorld* Self)
	{
		return Self->GetProgressDenominator();
	}
	DOTNET_EXPORT auto E_UWorld_GetRealTimeSeconds(UWorld* Self)
	{
		return Self->GetRealTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetShouldForceUnloadStreamingLevels(UWorld* Self)
	{
		return Self->GetShouldForceUnloadStreamingLevels();
	}
	DOTNET_EXPORT auto E_UWorld_GetShouldForceVisibleStreamingLevels(UWorld* Self)
	{
		return Self->GetShouldForceVisibleStreamingLevels();
	}
	DOTNET_EXPORT auto E_UWorld_GetTimeBetweenGarbageCollectionPasses(UWorld* Self)
	{
		return Self->GetTimeBetweenGarbageCollectionPasses();
	}
	DOTNET_EXPORT auto E_UWorld_GetTimeSeconds(UWorld* Self)
	{
		return Self->GetTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetUnpausedTimeSeconds(UWorld* Self)
	{
		return Self->GetUnpausedTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_HandleTimelineScrubbed(UWorld* Self)
	{
		Self->HandleTimelineScrubbed();
	}
	DOTNET_EXPORT auto E_UWorld_HasBegunPlay(UWorld* Self)
	{
		return Self->HasBegunPlay();
	}
	DOTNET_EXPORT auto E_UWorld_HasDefaultPhysicsVolume(UWorld* Self)
	{
		return Self->HasDefaultPhysicsVolume();
	}
	DOTNET_EXPORT auto E_UWorld_HasEndOfFrameUpdates(UWorld* Self)
	{
		return Self->HasEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UWorld_HasMarkedObjectsPendingKill(UWorld* Self)
	{
		return Self->HasMarkedObjectsPendingKill();
	}
	DOTNET_EXPORT auto E_UWorld_InitializeActorsForPlay(UWorld* Self, INT_PTR InURL, bool bResetTime)
	{
		auto& _p0 = *(FURL*)InURL;
		auto _p1 = bResetTime;
		Self->InitializeActorsForPlay(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_InvalidateModelSurface(UWorld* Self, bool bCurrentLevelOnly)
	{
		auto _p0 = bCurrentLevelOnly;
		Self->InvalidateModelSurface(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_IsCameraMoveable(UWorld* Self)
	{
		return Self->IsCameraMoveable();
	}
	DOTNET_EXPORT auto E_UWorld_IsClient(UWorld* Self)
	{
		return Self->IsClient();
	}
	DOTNET_EXPORT auto E_UWorld_IsEditorWorld(UWorld* Self)
	{
		return Self->IsEditorWorld();
	}
	DOTNET_EXPORT auto E_UWorld_IsGameWorld(UWorld* Self)
	{
		return Self->IsGameWorld();
	}
	DOTNET_EXPORT auto E_UWorld_IsInSeamlessTravel(UWorld* Self)
	{
		return Self->IsInSeamlessTravel();
	}
	DOTNET_EXPORT auto E_UWorld_IsMapChangeReady(UWorld* Self)
	{
		return Self->IsMapChangeReady();
	}
	DOTNET_EXPORT auto E_UWorld_IsNavigationRebuilt(UWorld* Self)
	{
		return Self->IsNavigationRebuilt();
	}
	DOTNET_EXPORT auto E_UWorld_IsNetMode(UWorld* Self, ENetMode Mode)
	{
		auto _p0 = Mode;
		return Self->IsNetMode(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_IsPaused(UWorld* Self)
	{
		return Self->IsPaused();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInEditor(UWorld* Self)
	{
		return Self->IsPlayInEditor();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayingClientReplay(UWorld* Self)
	{
		return Self->IsPlayingClientReplay();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayingReplay(UWorld* Self)
	{
		return Self->IsPlayingReplay();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInMobilePreview(UWorld* Self)
	{
		return Self->IsPlayInMobilePreview();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInPreview(UWorld* Self)
	{
		return Self->IsPlayInPreview();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInVulkanPreview(UWorld* Self)
	{
		return Self->IsPlayInVulkanPreview();
	}
	DOTNET_EXPORT auto E_UWorld_IsPreparingMapChange(UWorld* Self)
	{
		return Self->IsPreparingMapChange();
	}
	DOTNET_EXPORT auto E_UWorld_IsPreviewWorld(UWorld* Self)
	{
		return Self->IsPreviewWorld();
	}
	DOTNET_EXPORT auto E_UWorld_IsRecordingClientReplay(UWorld* Self)
	{
		return Self->IsRecordingClientReplay();
	}
	DOTNET_EXPORT auto E_UWorld_IsServer(UWorld* Self)
	{
		return Self->IsServer();
	}
	DOTNET_EXPORT auto E_UWorld_IsVisibilityRequestPending(UWorld* Self)
	{
		return Self->IsVisibilityRequestPending();
	}
	DOTNET_EXPORT auto E_UWorld_Listen(UWorld* Self, INT_PTR InURL)
	{
		auto& _p0 = *(FURL*)InURL;
		return Self->Listen(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_MarkActorComponentForNeededEndOfFrameUpdate(UWorld* Self, UActorComponent* Component, bool bForceGameThread)
	{
		auto _p0 = Component;
		auto _p1 = bForceGameThread;
		Self->MarkActorComponentForNeededEndOfFrameUpdate(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_MarkObjectsPendingKill(UWorld* Self)
	{
		Self->MarkObjectsPendingKill();
	}
	DOTNET_EXPORT auto E_UWorld_PerformGarbageCollectionAndCleanupActors(UWorld* Self)
	{
		Self->PerformGarbageCollectionAndCleanupActors();
	}
	DOTNET_EXPORT auto E_UWorld_PopulateStreamingLevelsToConsider(UWorld* Self)
	{
		Self->PopulateStreamingLevelsToConsider();
	}
	DOTNET_EXPORT auto E_UWorld_PrepareMapChange(UWorld* Self, INT_PTR LevelNames)
	{
		auto& _p0 = *(const TArray<FName>*)LevelNames;
		Self->PrepareMapChange(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ProcessLevelStreamingVolumes(UWorld* Self, INT_PTR OverrideViewLocation)
	{
		auto _p0 = (FVector*)OverrideViewLocation;
		Self->ProcessLevelStreamingVolumes(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_PropagateLightingScenarioChange(UWorld* Self)
	{
		Self->PropagateLightingScenarioChange();
	}
	DOTNET_EXPORT auto E_UWorld_RemapCompiledScriptActor(UWorld* Self, char* Str)
	{
		auto _p0 = ConvertFromManage_FString(Str);
		return Self->RemapCompiledScriptActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RemoveActor(UWorld* Self, AActor* Actor, bool bShouldModifyLevel)
	{
		auto _p0 = Actor;
		auto _p1 = bShouldModifyLevel;
		Self->RemoveActor(_p0, _p1);
	}